--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       left:50%;
       top:50%;
       transform:translate(-50%,-50%);
-      font-family:'Great Vibes',cursive;
+      font-family:'Homemade Apple','Shadows Into Light','Indie Flower','Great Vibes',cursive;
       color:#5b2b2b;
       font-size:clamp(24px,3.5vw,36px);
       letter-spacing:1.2px;
