--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>A Goodbye Note — Love Letter</title>
+  <title>A Goodbye Note — Love Letter (fixed with animation)</title>
 
   <!-- Google Fonts for handwritten effect -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,11 +14,13 @@
     :root{
       --bg:#fff8f7;
       --accent:#b84545;
+      --accent-strong:#962f33;
       --env-base:#f6e7e3;
       --shadow: 0 28px 80px rgba(22,16,14,0.32);
       --paper-width: min(860px, 92vw);
       --paper-height: min(1100px, 86vh);
       --flap-height: 120px;
+      --paper-texture: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='6' height='6' viewBox='0 0 6 6'%3E%3Crect width='6' height='6' fill='%23fffefc'/%3E%3Cpath d='M-1 1 L1 -1 M0 6 L6 0 M5 7 L7 5' stroke='%23f0e7e4' stroke-width='0.5' opacity='0.35'/%3E%3C/svg%3E");
     }
 
     *{box-sizing:border-box}
@@ -36,128 +38,62 @@
       -moz-osx-font-smoothing:grayscale;
     }
 
-    .stage{width:100%;max-width:1200px;display:flex;flex-direction:column;align-items:center;gap:18px}
+    .stage{width:100%;max-width:1200px;display:flex;flex-direction:column;align-items:center;gap:18px;position:relative}
 
-    /* Envelope */
-    .envelope-wrap{
-      width: min(480px, 48vw);
-      height: calc(min(340px, 38vh));
-      perspective:1500px;
-      display:flex;align-items:center;justify-content:center;
-      cursor:pointer;
-    }
+    .overlay{position:fixed;inset:0;background:rgba(6,6,6,0.28);opacity:0;visibility:hidden;transition:opacity 240ms ease, visibility 0ms linear 240ms;z-index:18}
+    .overlay.show{opacity:1;visibility:visible}
 
-    .envelope{
-      position:relative;
-      width:100%;
-      height:100%;
-      transform-style:preserve-3d;
-      transition: transform 300ms ease;
-      pointer-events:auto;
-    }
+    .envelope-wrap{width:min(480px,48vw);height:calc(min(340px,38vh));perspective:1500px;display:flex;align-items:center;justify-content:center}
 
+    .envelope{position:relative;width:100%;height:100%;transform-style:preserve-3d;transition:transform 300ms ease;pointer-events:auto}
     .envelope:hover{transform:translateY(-10px) rotateX(8deg) rotateZ(-2deg)}
     .envelope:focus{outline:4px solid rgba(184,70,70,0.12);outline-offset:8px}
 
-    .env-body{
-      position:absolute;
-      inset:0;
-      border-radius:14px;
-      background:linear-gradient(180deg,var(--env-base), #fff5f0);
-      box-shadow: var(--shadow);
-      border:1px solid rgba(0,0,0,0.08);
-      overflow:hidden;
-      z-index:1;
-      clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-      background-image: url('https://www.transparenttextures.com/patterns/paper-fibers.png');
-      background-blend-mode: overlay;
-    }
+    .env-body{position:absolute;inset:0;border-radius:14px;background:linear-gradient(180deg,var(--env-base), #fff5f0);box-shadow:var(--shadow);border:1px solid rgba(0,0,0,0.08);overflow:hidden;z-index:1;clip-path:polygon(0 0,100% 0,100% 100%,0% 100%);background-image:var(--paper-texture);background-blend-mode:overlay}
 
-    .env-flap{
-      position:absolute;
-      left:50%;
-      top:0;
-      transform:translateX(-50%);
-      width:0;
-      height:0;
-      border-left: calc(50% - 12px) solid transparent;
-      border-right: calc(50% - 12px) solid transparent;
-      border-bottom: var(--flap-height) solid #f2d8d0;
-      transform-origin: top center;
-      z-index:4;
-      transition: transform 900ms cubic-bezier(.2,.9,.3,1);
-      background-image: url('https://www.transparenttextures.com/patterns/paper-fibers.png');
-    }
-    .envelope.open .env-flap{ transform: translateX(-50%) rotateX(-192deg); }
+    .env-flap{position:absolute;left:50%;top:0;transform:translateX(-50%);width:0;height:0;border-left:calc(50% - 12px) solid transparent;border-right:calc(50% - 12px) solid transparent;border-bottom:var(--flap-height) solid #f2d8d0;transform-origin:top center;z-index:4;transition:transform 900ms cubic-bezier(.2,.9,.3,1);background-image:var(--paper-texture)}
+    .envelope.open .env-flap{transform:translateX(-50%) rotateX(-180deg)}
 
-    .env-label{
-      position:absolute;
-      left:50%;
-      top:50%;
-      transform:translate(-50%,-50%);
-      font-family:'Homemade Apple','Shadows Into Light','Indie Flower','Great Vibes',cursive;
-      color:#5b2b2b;
-      font-size:clamp(24px,3.5vw,36px);
-      letter-spacing:1.2px;
-      text-transform:uppercase;
-      text-shadow: 0 2px 4px rgba(0,0,0,0.06);
-      z-index:5;
-      pointer-events:none;
-    }
+    .env-label{position:absolute;left:50%;top:50%;transform:translate(-50%,-50%);font-family:'Homemade Apple','Shadows Into Light','Indie Flower','Great Vibes',cursive;color:#5b2b2b;font-size:clamp(24px,3.5vw,36px);letter-spacing:1.2px;text-transform:uppercase;text-shadow:0 2px 4px rgba(0,0,0,0.06);z-index:5;pointer-events:none}
 
-    /* Paper */
-    .paper{
-      position:fixed;
-      left:50%;
-      top:50%;
-      transform:translate(-50%,-30%) scale(0.88);
-      width:var(--paper-width);
-      height:var(--paper-height);
-      background: #fffefc url('https://www.transparenttextures.com/patterns/paper-fibers.png');
-      background-size:cover;
-      box-shadow: 0 40px 120px rgba(16,10,8,0.32);
-      border-radius:10px;
-      padding:56px 64px;
-      opacity:0;
-      visibility:hidden;
-      transition: transform 900ms cubic-bezier(.2,.9,.3,1), opacity 420ms ease, visibility 0ms linear 420ms;
-      overflow:auto;
-      z-index:20;
-      border:1px solid rgba(0,0,0,0.06);
+    .paper{position:fixed;left:50%;top:48%;transform:translate(-50%,-30%) scale(0.88);width:var(--paper-width);max-height:calc(100vh - 64px);height:var(--paper-height);background:#fffefc var(--paper-texture);background-size:cover;box-shadow:0 40px 120px rgba(16,10,8,0.32);border-radius:10px;padding:56px 64px;opacity:0;visibility:hidden;transition:transform 420ms cubic-bezier(.2,.9,.3,1), opacity 240ms ease, visibility 0ms linear 240ms;overflow:auto;z-index:20;border:1px solid rgba(0,0,0,0.06)}
+    .paper::before{content:'';position:absolute;inset:0;background:repeating-linear-gradient(to bottom,transparent 0px,transparent 28px,rgba(255,150,150,0.07) 29px);pointer-events:none;border-radius:10px}
+    .paper.show{opacity:1;visibility:visible;transform:translate(-50%,-50%) scale(1);transition-delay:120ms;animation:slideUp 600ms cubic-bezier(.25,.8,.3,1)}
+
+    @keyframes slideUp{
+      0%{transform:translate(-50%,20%) scale(0.85);opacity:0}
+      60%{transform:translate(-50%,-55%) scale(1.02);opacity:1}
+      100%{transform:translate(-50%,-50%) scale(1)}
     }
-    .paper::before{
-      content:'';
-      position:absolute;
-      inset:0;
-      background:repeating-linear-gradient(to bottom, transparent 0px, transparent 28px, rgba(255,150,150,0.15) 29px);
-      pointer-events:none;
-      border-radius:10px;
-    }
-    .paper.show{opacity:1;visibility:visible;transform:translate(-50%,-50%) scale(1);transition-delay:120ms}
 
     .paper .title{font-family:'Great Vibes','Homemade Apple','Shadows Into Light',cursive;font-size:clamp(44px,5vw,70px);color:var(--accent);margin:0 0 20px;text-align:center}
-    .paper .body{font-family:'Homemade Apple','Shadows Into Light','Indie Flower','Great Vibes', 'Segoe Script', 'Bradley Hand', 'Lucida Handwriting', cursive;font-size:clamp(18px,2.2vw,24px);line-height:1.9;color:#3c2e2e;white-space:pre-wrap;letter-spacing:0.2px;text-shadow:0.4px 0.8px rgba(0,0,0,0.02);}
+    .paper .body{font-family:'Homemade Apple','Shadows Into Light','Indie Flower','Great Vibes','Segoe Script','Bradley Hand','Lucida Handwriting',cursive;font-size:clamp(18px,2.2vw,24px);line-height:1.9;color:#3c2e2e;white-space:pre-wrap;letter-spacing:0.2px;text-shadow:0.4px 0.8px rgba(0,0,0,0.02)}    
 
     .handwritten-fallback .paper .body{font-family:'Segoe Script','Bradley Hand','Lucida Handwriting',cursive;font-size:clamp(19px,2.4vw,26px);letter-spacing:0.4px;transform:skewX(-0.6deg);text-shadow:0.6px 1px rgba(0,0,0,0.03)}
 
     .controls{display:flex;gap:12px;justify-content:center;margin-top:20px}
-    .btn{padding:8px 12px;border-radius:8px;border:1px solid rgba(0,0,0,0.1);cursor:pointer}
-    .btn--accent{padding:8px 12px;border-radius:8px;border:none;background:var(--accent);color:#fff}
+    .btn{padding:8px 12px;border-radius:8px;border:1px solid rgba(0,0,0,0.08);cursor:pointer;background:transparent}
+    .btn:focus{outline:3px solid rgba(151,85,85,0.14);outline-offset:3px}
+    .btn--accent{padding:8px 12px;border-radius:8px;border:none;background:var(--accent-strong);color:#fff}
+
+    .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0 0 0 0);white-space:nowrap;border:0}
 
     @media (prefers-reduced-motion:reduce){*{transition:none!important;animation:none!important}.paper{transform:translate(-50%,-50%) scale(1);opacity:1;visibility:visible}.env-flap{transform:none}}
-    @media(max-width:720px){.paper{padding:28px 20px;height:78vh;width:94vw}}
+    @media(max-width:720px){.paper{padding:28px 20px;height:auto;max-height:78vh;width:94vw}}
   </style>
 </head>
 <body>
 
   <main class="stage">
     <div class="envelope-wrap" id="envelopeWrap">
-      <div class="envelope" id="envelope" role="button" tabindex="0" aria-pressed="false" aria-label="Open the envelope">
+      <div class="envelope" id="envelope" role="button" tabindex="0" aria-expanded="false" aria-label="Open the envelope">
         <div class="env-body" aria-hidden="true"></div>
         <div class="env-flap" aria-hidden="true"></div>
         <div class="env-label">A GOODBYE NOTE!</div>
       </div>
     </div>
+
+    <div id="overlay" class="overlay" tabindex="-1" aria-hidden="true"></div>
 
     <article class="paper" id="paper" aria-hidden="true">
       <h1 class="title">To the one I couldn't keep...</h1>
@@ -166,69 +102,50 @@
 This is placeholder text. Replace this with your real words.
 
 Always,
-Your name</div>
+Your Real Fictional Character</div>
 
       <div class="controls">
-        <button class="btn" id="closeBtn">Close</button>
-        <button class="btn btn--accent" id="replayBtn">Replay</button>
+        <button class="btn" id="closeBtn" aria-label="Close letter">Close</button>
+        <button class="btn btn--accent" id="replayBtn" aria-label="Replay opening animation">Replay</button>
       </div>
     </article>
+
+    <div id="srStatus" class="sr-only" aria-live="polite"></div>
   </main>
 
   <script>
     const wantedFonts = ['Homemade Apple','Great Vibes','Shadows Into Light','Indie Flower'];
-    function checkFontsAndWarn(){
-      if(!document.fonts) return;
-      const missing = wantedFonts.filter(f => !document.fonts.check(`1rem "${f}"`));
-      if(missing.length){
-        const b = document.createElement('div');
-        b.id = 'fontWarn';
-        b.innerHTML = `<strong>Note:</strong> Handwriting webfonts failed to load (${missing.join(', ')}). Using local handwritten fallback.`;
-        document.body.prepend(b);
-        document.documentElement.classList.add('handwritten-fallback');
-        setTimeout(()=> b.style.opacity = '0', 5600);
-        setTimeout(()=> b.remove(), 6400);
-      }
-    }
-    window.addEventListener('load', ()=> setTimeout(checkFontsAndWarn, 220));
+    function checkFontsAndWarn(){if(!document.fonts)return;document.fonts.ready.then(()=>{const missing=wantedFonts.filter(f=>!document.fonts.check(`1rem "${f}"`));if(missing.length){const b=document.createElement('div');b.id='fontWarn';b.style.cssText='position:fixed;left:12px;top:12px;padding:10px 14px;background:#fff5f5;border-radius:8px;border:1px solid rgba(184,70,70,0.08);z-index:9999;font-family:system-ui,sans-serif;font-size:13px;color:#5a2d2d;';b.innerHTML=`<strong>Note:</strong> Handwriting webfonts failed to load (${missing.join(', ')}). Using local handwritten fallback.`;document.body.prepend(b);document.documentElement.classList.add('handwritten-fallback');setTimeout(()=>b.style.opacity='0',5600);setTimeout(()=>b.remove(),6400);}}).catch(()=>{});}window.addEventListener('load',()=>setTimeout(checkFontsAndWarn,220));
 
-    const envelope = document.getElementById('envelope');
-    const paper = document.getElementById('paper');
-    const closeBtn = document.getElementById('closeBtn');
-    const replayBtn = document.getElementById('replayBtn');
+    const envelope=document.getElementById('envelope');
+    const paper=document.getElementById('paper');
+    const closeBtn=document.getElementById('closeBtn');
+    const replayBtn=document.getElementById('replayBtn');
+    const overlay=document.getElementById('overlay');
+    const srStatus=document.getElementById('srStatus');
 
-    function openEnvelope(){
-      envelope.classList.add('open');
-      envelope.setAttribute('aria-pressed','true');
-      paper.classList.add('show');
-      paper.setAttribute('aria-hidden','false');
-    }
+    let lastFocused=null;
+    let focusableElements=[];
+    let focusTrapHandler=null;
 
-    function closeEnvelope(){
-      envelope.classList.remove('open');
-      envelope.setAttribute('aria-pressed','false');
-      paper.classList.remove('show');
-      paper.setAttribute('aria-hidden','true');
-    }
+    function updateFocusable(){focusableElements=Array.from(paper.querySelectorAll('a[href], button:not([disabled]), textarea, input, select, [tabindex]:not([tabindex="-1"])'));}
+    function trapFocus(e){if(e.key==='Tab'){if(focusableElements.length===0){e.preventDefault();return;}const first=focusableElements[0];const last=focusableElements[focusableElements.length-1];if(e.shiftKey){if(document.activeElement===first){e.preventDefault();last.focus();}}else{if(document.activeElement===last){e.preventDefault();first.focus();}}}else if(e.key==='Escape'){closeEnvelope();}}
 
-    envelope.addEventListener('click', ()=>{
-      if(envelope.classList.contains('open')){
-        closeEnvelope();
-      } else {
-        openEnvelope();
-      }
-    });
+    function openEnvelope(){if(envelope.classList.contains('open')){updateFocusable();(focusableElements[0]||paper).focus();return;}lastFocused=document.activeElement;envelope.classList.add('open');envelope.setAttribute('aria-expanded','true');overlay.classList.add('show');overlay.setAttribute('aria-hidden','false');paper.classList.add('show');paper.setAttribute('aria-hidden','false');paper.setAttribute('role','dialog');paper.setAttribute('aria-modal','true');document.documentElement.style.overflow='hidden';updateFocusable();(focusableElements[0]||paper).focus();focusTrapHandler=trapFocus;document.addEventListener('keydown',focusTrapHandler);srStatus.textContent='Letter opened';}
 
-    envelope.addEventListener('keydown',(e)=>{
-      if(e.key==='Enter' || e.key===' '){
-        e.preventDefault();
-        envelope.click();
-      }
-    });
+    function closeEnvelope(){if(!envelope.classList.contains('open'))return;envelope.classList.remove('open');envelope.setAttribute('aria-expanded','false');overlay.classList.remove('show');overlay.setAttribute('aria-hidden','true');paper.classList.remove('show');paper.setAttribute('aria-hidden','true');document.documentElement.style.overflow='';if(focusTrapHandler)document.removeEventListener('keydown',focusTrapHandler);try{if(lastFocused&&lastFocused.focus)lastFocused.focus();}catch(e){}srStatus.textContent='Letter closed';}
 
-    closeBtn.addEventListener('click',(e)=>{ e.stopPropagation(); closeEnvelope(); });
-    replayBtn.addEventListener('click',(e)=>{ e.stopPropagation(); closeEnvelope(); setTimeout(()=> openEnvelope(), 240); });
-    paper.addEventListener('click', e => e.stopPropagation());
+    envelope.addEventListener('click',e=>{e.stopPropagation();openEnvelope();});
+    envelope.addEventListener('keydown',e=>{if(e.key==='Enter'||e.key===' '){e.preventDefault();openEnvelope();}});
+    closeBtn.addEventListener('click',e=>{e.stopPropagation();closeEnvelope();});
+    overlay.addEventListener('click',e=>{closeEnvelope();});
+
+    replayBtn.addEventListener('click',e=>{e.stopPropagation();envelope.classList.remove('open');envelope.setAttribute('aria-expanded','false');paper.classList.remove('show');void envelope.offsetWidth;setTimeout(()=>{envelope.classList.add('open');envelope.setAttribute('aria-expanded','true');paper.classList.add('show');srStatus.textContent='Replay animation started';updateFocusable();(focusableElements[0]||paper).focus();},60);overlay.classList.add('show');});
+
+    paper.addEventListener('click',e=>e.stopPropagation());
+    document.addEventListener('keydown',e=>{if(e.key==='Escape'){if(envelope.classList.contains('open'))closeEnvelope();}});
+    window.addEventListener('resize',()=>{if(envelope.classList.contains('open')){updateFocusable();}});
+    checkFontsAndWarn();
   </script>
 </body>
 </html>
