--- a/index.html
+++ b/index.html
@@ -100,8 +100,13 @@
       <h1 class="title">To the one I couldn't keep...</h1>
       <div class="body" id="noteBody">Dear —
 
-This is placeholder text. Replace this with your real words.
+t’s hard to find the right words after all the time we’ve shared. These years have been filled with laughter, challenges, growth, and countless memories I’ll carry with me forever. While it’s time for our paths to part, I want you to know how much your presence has shaped my life and how deeply I appreciate every moment we’ve spent together.
 
+Goodbyes are never easy, but I hope this isn’t the end of what we’ve built—it’s simply a new chapter, one where we take with us all the lessons, warmth, and love we’ve shared. I wish you nothing but happiness, success, and peace in whatever comes next.
+
+Thank you for everything. You will always hold a special place in my heart.
+
+With gratitude and fondness,
 Always,
 Your Real Fictional Character</div>
 
